--- a/CakeShop/Views/Shared/_Layout.cshtml
+++ b/CakeShop/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
                             <a asp-controller="Cake" asp-action="Index">Home</a>
                         </li>
                         @await Component.InvokeAsync("CategoryMenu")
+                        @await Component.InvokeAsync("CartSummary")
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
